fix(components): add overflow to items in Technologies for Home

--- a/src/components/pages/home/technologies/technologies.module.scss
+++ b/src/components/pages/home/technologies/technologies.module.scss
@@ -53,6 +53,7 @@
 .item {
   position: relative;
   height: 450px;
+  overflow: hidden;
   border-radius: 4px;
   box-shadow: 0 15px 30px rgba($color-primary, 0.15);
 
